[package]
name = "bili-live-pulse"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
brotlic = "0.8.2"
flate2 = { version = "1.1.4", default-features = false, features = ["zlib-ng-compat"] }
futures-util = "0.3.31"
hyper = "1.7.0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["libc", "macros", "rt", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.12.23", features = ["json"] }

[dev-dependencies]
regex = "1"
