[package]
name = "bili-live-pulse"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
brotlic = "0.8.2"
flate2 = { version = "1.1.4", default-features = false, features = ["zlib-ng-compat"] }
futures-util = "0.3.31"
hyper = { version = "1", features = ["server"] }
hyper-util = "0"
http-body-util = "0"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["libc", "macros", "rt", "time"] }
tokio-util = "0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1"
openssl = "0"
hex = "0"
uuid = { version = "1", features = ["v4"] }
log = "0"
env_logger = { version = "0", features = ["kv"] }
fastrand = "2"

[dev-dependencies]
regex = "1"
serial_test = "*"
